--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,700&display=swap");
 
-/* * {
+* {
   
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-} */
+}
 body {
-  margin: 10px;
+  /* margin: 10px; */
   background: #2f7336; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
@@ -23,14 +23,18 @@ body {
   font-family: "Playfair Display", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 main {
-  max-width: 1000px;
-  margin: 50px auto;
-  overflow: hidden;
+  display: grid;
+  
+  /* max-width: 1000px; */
+  /* margin: 50px auto; */
+  /* overflow: hidden; */
 }
 .App {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
+  /* margin: 0; */
+  /* display: flex; */
+  /* flex-direction: column; */
+
 }
